# duck_town

./: .gitignore  README.md
.beads/: config.json  config.yaml  issues.jsonl  issues.jsonl.backup  routes.jsonl
.beads/export-state/: 03c004331fc1bf71.json
.beads/formulas/: .installed.json
.claude/: history.jsonl  stats-cache.json
.claude/debug/: 0154124f-e64b-4c8d-a427-94b861088bd6.txt  01a2be2d-ee6e-4824-9e39-b0a848e5f2ab.txt  029411b8-414a-44af-8873-57b54794740b.txt  02c538a2-3c07-45e0-9a46-9861453d0757.txt  02ff91e8-f905-46cf-8ef0-1a1f434a290e.txt  03eacf14-9f02-41fd-ac9a-a85921961134.txt  042e35cd-0c6e-49e7-ac3f-b6402f619322.txt  04517581-de50-4771-99ff-1f3045165751.txt  0472e682-8cfd-4c69-9109-f456db56cdd9.txt  06d9f442-7ee4-43a9-ba45-82911ee9ee8b.txt  06f40543-ab81-4a15-b59b-dbca79ab9a78.txt  09dd6a06-0981-4c7a-85c6-72e3d4211e80.txt  09f59a30-d275-483f-a90a-187476bcb8b6.txt  0ba4d3fe-1c10-42ab-a16a-6e9f7b871218.txt  0c07868a-d3dd-4069-85b1-d0c6fcdb5047.txt  0c33617b-191d-4e8e-a78a-d105bde3f452.txt  0c61a311-904f-4cac-a1b7-c89933c87576.txt  0debb430-d193-4874-b958-d489092460c5.txt  0e679643-df48-484a-957c-932525e01045.txt  0e9adfb7-88d3-4aea-b94a-5493773e7c50.txt  0fe5f6ef-4433-4b00-8a8c-0d00c5ee095e.txt  1000682b-35b6-4bdf-ac1d-bc37c0a4a2f6.txt  10029753-e523-4010-a806-a9e8c68d0262.txt  1121d829-5bc3-4d34-8076-07206de16cb4.txt  (+370 more)
Conducktor_rig/: config.json
daemon/: activity.json
deacon/: heartbeat.json
mayor/: overseer.json  rigs.json  town.json
mcp_server/: README.md  __init__.py  pyproject.toml  server.py  test_server.py
(+279 files in other folders)
